@@ -85,7 +85,7 @@ namespace KGySoft.Drawing.Shapes
             Debug.Assert(!matrix.IsIdentity);
             int len = points.Count;
             for (int i = 0; i < len; i++)
-                points[i] = points[i].Transform(matrix);
+                points[i] = matrix.Transform(points[i]);
 
             return this;
         }
